# SensitivityTools

./: LICENSE  README.md
Cpp/: CMakeLists.txt  firstapp.cpp  modeltrial.cpp
Cpp/examples/: firstapp.cpp  mcbatch.cpp
Cpp/include/: LinkDef.h  RooBDInverseHPdf.h  RooBDNormalHPdf.h  RooBDNormalSterilePdf.h  RooKurieNHPdf.h  TBetaGenerator.hh  TBetaTools.hh
Cpp/src/: RooBDInverseHPdf.cxx  RooBDNormalHPdf.cxx  RooBDNormalSterilePdf.cxx  RooKurieNHPdf.cxx
Python/: TBetaGenerator.py  testTBeta.py
